# lib_base

./: CMakeLists.txt  create.bat  lib_base.gyp
base/: algorithm.cpp  algorithm.h  algorithm_tests.cpp  assertion.h  atomic.h  base_file_utilities.cpp  base_file_utilities.h  base_integration.h  base_pch.cpp  base_pch.h  basic_types.h  battery_saving.cpp  battery_saving.h  build_config.h  bytes.cpp  bytes.h  call_delayed.h  caps_lock.h  concurrent_timer.cpp  concurrent_timer.h  crash_report_writer.cpp  crash_report_writer.h  custom_app_icon.h  custom_delete.h  debug_destroy_informer.h  debug_log.h  enum_mask.h  event_filter.cpp  event_filter.h  file_lock_posix.cpp  file_lock_win.cpp  flags.h  flags_tests.cpp  flat_map.h  flat_map_tests.cpp  flat_set.h  flat_set_tests.cpp  global_shortcuts.h  global_shortcuts_generic.cpp  global_shortcuts_generic.h  (+39 more)
base/platform/: base_accessibility.cpp  base_accessibility.h  base_platform_bt_utilities.h  base_platform_cellular_utilities.h  base_platform_custom_app_icon.h  base_platform_file_utilities.h  base_platform_global_shortcuts.h  base_platform_haptic.h  base_platform_info.cpp  base_platform_info.h  base_platform_location.h  base_platform_network_reachability.h  base_platform_power_save_blocker.h  base_platform_system_media_controls.h  base_platform_url_scheme.h  base_platform_wifi_utilities.h
base/platform/linux/: base_battery_saving_linux.cpp  base_battery_saving_linux_dummy.cpp  base_bt_utilities_linux.cpp  base_caps_lock_linux.cpp  base_cellular_utilities_linux.cpp  base_file_utilities_linux.cpp  base_file_utilities_linux.h  base_global_shortcuts_linux.cpp  base_haptic_linux.cpp  base_info_linux.cpp  base_info_linux.h  base_last_input_linux.cpp  base_linux_allocation_tracer.cpp  base_linux_allocation_tracer.h  base_linux_app_launch_context.cpp  base_linux_app_launch_context.h  base_linux_dbus_utilities.cpp  base_linux_dbus_utilities.h  base_linux_glib_helper.h  base_linux_glibmm_helper.h  base_linux_gtk_integration.cpp  base_linux_gtk_integration.h  base_linux_gtk_integration_dummy.cpp  base_linux_gtk_integration_p.h  base_linux_library.cpp  base_linux_library.h  base_linux_wayland_helper.cpp  base_linux_wayland_integration.cpp  base_linux_wayland_integration.h  base_linux_wayland_integration_dummy.cpp  base_linux_wayland_utilities.h  base_linux_xcb_utilities.cpp  base_linux_xcb_utilities.h  base_linux_xdg_activation_token.cpp  base_linux_xdg_activation_token.h  base_linux_xdp_utilities.cpp  base_linux_xdp_utilities.h  base_linux_xlib_helper.cpp  base_linux_xlib_helper.h  base_linux_xsettings.cpp  (+24 more)
base/platform/mac/: base_battery_saving_mac.mm  base_bt_utilities_mac.mm  base_caps_lock_mac.mm  base_cellular_utilities_mac.h  base_cellular_utilities_mac.mm  base_confirm_quit.h  base_confirm_quit.mm  base_custom_app_icon_mac.mm  base_file_utilities_mac.h  base_file_utilities_mac.mm  base_global_shortcuts_mac.h  base_global_shortcuts_mac.mm  base_haptic_mac.mm  base_info_mac.h  base_info_mac.mm  base_last_input_mac.mm  base_layout_switch_mac.mm  base_location_mac.mm  base_mac_key_codes.h  base_mac_key_codes.mm  base_network_reachability_mac.h  base_platform_file_utilities_mac.mm  base_platform_info_mac.mm  base_platform_utilities_mac.h  base_platform_utilities_mac.mm  base_power_save_blocker_mac.mm  base_process_mac.mm  base_screen_reader_state_mac.h  base_screen_reader_state_mac.mm  base_system_media_controls_mac.mm  base_system_unlock_mac.h  base_system_unlock_mac.mm  base_url_scheme_mac.mm  base_utilities_mac.h  base_wifi_utilities_mac.mm
base/platform/win/: base_battery_saving_win.cpp  base_bt_utilities_win.cpp  base_bt_utilities_win.h  base_caps_lock_win.cpp  base_cellular_utilities_win.cpp  base_file_utilities_win.cpp  base_file_utilities_win.h  base_global_shortcuts_win.cpp  base_global_shortcuts_win.h  base_haptic_win.cpp  base_haptic_win.h  base_info_win.cpp  base_info_win.h  base_last_input_win.cpp  base_layout_switch_win.cpp  base_location_win.cpp  base_network_reachability_win.cpp  base_platform_file_utilities_win.cpp  base_platform_file_utilities_win.h  base_platform_info_win.cpp  base_power_save_blocker_win.cpp  base_process_win.cpp  base_screen_reader_state_win.cpp  base_screen_reader_state_win.h  base_system_media_controls_win.cpp  base_system_unlock_win.cpp  base_url_scheme_win.cpp  base_wifi_utilities_win.cpp  base_wifi_utilities_win.h  base_windows_co_task_mem.h  base_windows_gdiplus_h.h  base_windows_key_codes.cpp  base_windows_key_codes.h  base_windows_rpcndr_h.h  base_windows_safe_library.cpp  base_windows_safe_library.h  base_windows_shlobj_h.h  base_windows_system_media_controls.cpp  base_windows_system_media_controls.h  base_windows_winrt.cpp  (+3 more)
base/platform/win/wrl/: wrl_event_h.h  wrl_implements_h.h  wrl_module_h.h
base/qt/: qt_common_adapters.h  qt_compare.h  qt_debug_hotkey.cpp  qt_debug_hotkey.h  qt_key_modifiers.h  qt_tab_key.cpp  qt_tab_key.h
gyp/: list_sources.py  sources.txt
